--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
 
     <section class="hero-image">
-      <div class="container"></div><h1 class="heading">Неопознанный Енот</h1>
-      <p>Junior верстальщик</p>
+      <div class="container"><h1 class="heading">Неопознанный Енот</h1>
+      <p>Junior верстальщик</p></div>
     </section>
 
     <section class="intro">
