--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <section class="intro">
 <div class="container"><h2 class="subheading">Давайте познакомимся</h2>
+   <figure class="user-image">
+    <img src="user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+  </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -30,7 +33,12 @@
 
     <section class="portfolio">
 <div class="container"><h2 class="subheading">Мои работы</h2>
-      <h3>Сайт инструктора Кекса</h3>
+  <figure class="project-image">
+  <img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+    <figcaption>Сайт инструктора Кекса</figcaption>
+</figure>
+      
+  <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -40,7 +48,10 @@
     </section>
 
     <footer class="page-footer">
-<div class="container"> Контакты в подвале</div>
+<div class="container"> 
+  <a class="footer-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+    <a class="footer-phone" href="tel:+79876543210">+7 987 654 32 10</a>
+      </div>
      
     </footer>
   </body>
